Add model.proto
