# pkg/server/serverpb/server.swagger.json
@@ -315,6 +315,38 @@
     }
   },
   "definitions": {
+    "modelPool": {
+      "type": "object",
+      "properties": {
+        "start": {
+          "type": "string"
+        },
+        "end": {
+          "type": "string"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tags": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/modelTag"
+          }
+        }
+      }
+    },
+    "modelTag": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string"
+        }
+      }
+    },
     "serverpbActivateIPResponse": {
       "type": "object"
     },
@@ -337,7 +369,7 @@
         "tags": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/serverpbTag"
+            "$ref": "#/definitions/modelTag"
           }
         }
       }
@@ -356,7 +388,7 @@
           "format": "int32"
         },
         "pool": {
-          "$ref": "#/definitions/serverpbPool"
+          "$ref": "#/definitions/modelPool"
         }
       }
     },
@@ -395,40 +427,8 @@
         "tags": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/serverpbTag"
+            "$ref": "#/definitions/modelTag"
           }
-        }
-      }
-    },
-    "serverpbPool": {
-      "type": "object",
-      "properties": {
-        "start": {
-          "type": "string"
-        },
-        "end": {
-          "type": "string"
-        },
-        "status": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "tags": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/serverpbTag"
-          }
-        }
-      }
-    },
-    "serverpbTag": {
-      "type": "object",
-      "properties": {
-        "key": {
-          "type": "string"
-        },
-        "value": {
-          "type": "string"
         }
       }
     }
